fix sidebar overlapping modal backdrop

--- a/src/scss/adminx.scss
+++ b/src/scss/adminx.scss
@@ -8,7 +8,7 @@ $body-bg: #f6f9fa !default;
 $enable-gradients: true !default;
 $headings-font-weight: 300 !default;
 
-$sidebar-zindex: 1440 !default;
+$sidebar-zindex: 1040 !default;
 $sidebar-width: 260px !default;
 $sidebar-collapsed-width: 4rem !default;
 
